# xcc

./: Cargo.toml  LICENSE-MIT  README.md
benches/: bench_matrix.rs
examples/: pentominoes.rs  queens.rs  sudoku.rs
src/: builder.rs  color.rs  lib.rs  matrix.rs  samples.rs  solver.rs  types.rs  unique.rs
