[package]
name = "xcc"
description = "Exact Cover solver with color extensions"
version = "0.1.0"
authors = ["Pete Bevin <pete@petebevin.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/pbevin/xcc"
keywords = ["combinatorial", "constraint"]
categories = ["algorithms"]

[[bench]]
name = "bench_matrix"
harness = false

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
pretty_assertions = "1.3.0"

[dependencies]
fixedbitset = "0.5"
thiserror = "1"
